# hs-edn-parser

./: README.md  hs-edn-parser.cabal
src/Text/: EDN.hs
test/parse/: 5  all.edn
